<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.todomvvm.addedit.TaskAddViewModel" />

        <variable
            name="addEditFragment"
            type="com.example.todomvvm.addedit.TaskAddEditFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".addedit.TaskAddEditFragment"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/task_title_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:hint="@string/task_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/task_title_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:text="@={viewModel.taskTitle}"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/task_description_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:hint="@string/task_description">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/task_description_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textMultiLine"
                android:text="@={viewModel.taskDescription}"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/task_save_fab_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="24dp"
        android:src="@drawable/ic_baseline_check_24"
        android:onClick="@{() -> addEditFragment.addTask()}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>