<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewmodel"
            type="com.example.todomvvm.taskdetail.TaskDetailViewModel" />

        <variable
            name="detailFragment"
            type="com.example.todomvvm.taskdetail.TaskDetailFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".taskdetail.TaskDetailFragment"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/task_detail_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="26sp"
                android:text="@{viewmodel.currentTask.title}"
                tools:text="@string/task_title"/>

            <TextView
                android:id="@+id/task_detail_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewmodel.currentTask.description}"
                tools:text="@string/task_description"/>
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/task_edit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="24dp"
            android:src="@drawable/ic_baseline_edit_24"
            android:onClick="@{() -> detailFragment.nextFragment()}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>