<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/tasksListFragment"
        android:title="@string/task_navigation"
        android:icon="@drawable/ic_baseline_edit_24"/>

    <item
        android:id="@+id/statisticsFragment"
        android:title="@string/statistics_navigation"
        android:icon="@drawable/ic_baseline_assessment_24"/>

</menu>