<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.example.todomvvm.statistics.StatisticsViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".statistics.StatisticsFragment">

        <TextView
            android:id="@+id/active_task_percent_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{@string/active_task_percent(viewmodel.activeTaskPercent)}" />

        <TextView
            android:id="@+id/completed_task_percent_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{@string/completed_task_percent(viewmodel.completedTaskPercent)}" />

    </LinearLayout>
</layout>