<resources>
    <string name="app_name">ToDoMVVM</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="task_title">Title</string>
    <string name="task_description">task description</string>

    <string name="menu_filter_text">filter</string>
    <string name="all_task">All Tasks</string>
    <string name="completed_task">Completed Tasks</string>
    <string name="active_task">Active Tasks</string>

    <string name="task_navigation">Task</string>
    <string name="statistics_navigation">Statistics</string>

    <string name="active_task_percent">Active : %.1f％</string>
    <string name="completed_task_percent">Completed : %.1f％</string>
</resources>
