...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/filter_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textSize="24sp"
                android:textStyle="bold"
                android:text="@{context.getString(viewModel.taskFilter)}"
                tools:text="All Task"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/tasks_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:listData="@{viewModel.allTasks}"
                app:filterId="@{viewModel.taskFilter}"/>

...
